src/test/deca/context/valid/added/class_null.deca
// Description:
//
//
//
class A{
    int a;
}
{
   // A x = null;
}