src/test/deca/context/invalid/added/plus_types.deca
// Doit lever une exception de vérification contextuelle

{
    int x;

    x = 4 + false;
}